@@ -37,15 +37,16 @@ public abstract class GPData implements Prototype
         safely assume that gpd is of the same class as we are.
 		Do not share pointers with the other object, except to
 		read-only data: instead, copy any read-write data as necessary. */
-    public abstract GPData copyTo(final GPData gpd);
+    public abstract void copyTo(final GPData gpd);
 
     public Parameter defaultBase()
         {
         return GPDefaults.base().push(P_GPDATA);
         }
 
-    public void setup(final EvolutionState state, final Parameter base) 
-        { }
+    public void setup(final EvolutionState state, final Parameter base)
+		{
+		}
 
     public Object clone()
         {
