@@ -78,8 +78,7 @@ public class FloatVectorIndividual extends VectorIndividual
 
     public Object clone()
         {
-        FloatVectorIndividual myobj = (FloatVectorIndividual) (super
-            .clone());
+        FloatVectorIndividual myobj = (FloatVectorIndividual) (super.clone());
 
         // must clone the genome
         myobj.genome = (float[]) (genome.clone());
@@ -352,6 +351,7 @@ public class FloatVectorIndividual extends VectorIndividual
         FloatVectorSpecies s = (FloatVectorSpecies) species;
         if (!(s.mutationProbability > 0.0))
             return;
+		boolean mutationIsBounded = s.mutationIsBounded;
         MersenneTwisterFast rng = state.random[thread];
 
         if (s.mutationType == FloatVectorSpecies.C_GAUSS_MUTATION)
@@ -369,7 +369,7 @@ public class FloatVectorIndividual extends VectorIndividual
                         {
                         val = (float) (rng.nextGaussian() * stdev + genome[x]);
                         outOfBoundsLeftOverTries--;
-                        if(val > max || val < min) 
+                        if (mutationIsBounded && (val > max || val < min))
                             {
                             if(givingUpAllowed && (outOfBoundsLeftOverTries==0))
                                 {
@@ -385,7 +385,7 @@ public class FloatVectorIndividual extends VectorIndividual
             }
         else if (s.mutationType == FloatVectorSpecies.C_POLYNOMIAL_MUTATION)
             {
-            polynomialMutate(state.random[thread], this, s.mutationDistributionIndex, s.polynomialIsBounded);
+            polynomialMutate(state.random[thread], this, s.mutationDistributionIndex, s.polynomialIsBounded, s.mutationIsBounded);
             }
         else
             {// C_RESET_MUTATION
@@ -398,7 +398,7 @@ public class FloatVectorIndividual extends VectorIndividual
 
     /** This function is broken out to keep it identical to NSGA-II's mutation.c code. eta_m is the distribution
         index.  */
-    public void polynomialMutate(MersenneTwisterFast random, FloatVectorIndividual individual, double eta_m, boolean bounded)
+    public void polynomialMutate(MersenneTwisterFast random, FloatVectorIndividual individual, double eta_m, boolean boundedPolynomialVersion, boolean mutationIsBounded)
         {
         FloatVectorSpecies s = (FloatVectorSpecies) individual.species;
         float[] ind = individual.genome;
@@ -427,22 +427,17 @@ public class FloatVectorIndividual extends VectorIndividual
                     if (rnd <= 0.5)
                         {
                         xy = 1.0-delta1;
-                        val = 2.0*rnd + (bounded ? (1.0-2.0*rnd)*(Math.pow(xy,(eta_m+1.0))) : 0.0);
+                        val = 2.0*rnd + (boundedPolynomialVersion ? (1.0-2.0*rnd)*(Math.pow(xy,(eta_m+1.0))) : 0.0);
                         deltaq =  Math.pow(val,mut_pow) - 1.0;
                         }
                     else
                         {
                         xy = 1.0-delta2;
-                        val = 2.0*(1.0-rnd) + (bounded ? 2.0*(rnd-0.5)*(Math.pow(xy,(eta_m+1.0))) : 0.0);
+                        val = 2.0*(1.0-rnd) + (boundedPolynomialVersion ? 2.0*(rnd-0.5)*(Math.pow(xy,(eta_m+1.0))) : 0.0);
                         deltaq = 1.0 - (Math.pow(val,mut_pow));
                         }
                     y1 = y + deltaq*(yu-yl);
-                    //if (y1<yl)
-                    //      y1 = yl;
-                    //if (y1>yu)
-                    //      y1 = yu;
-                    //break;
-                    if (y1 >= yl && y1 <= yu) break;  // yay, found one
+                    if (mutationIsBounded && (y1 >= yl && y1 <= yu)) break;  // yay, found one
                     }
                                         
                 // at this point, if tries is totalTries, we failed
